# sentiment-analysis-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.mcp  README.md  keywords.txt  pyproject.toml
src/mistral_sentiment_app/: __init__.py  api.py  discord_service.py  google_sheets_export.py  llm_analysis.py  main.py  mcp_server.py  models.py  service.py  slack_service.py  twitter_service.py
